test/files/neg/class-of-double-targs.check
class-of-double-targs.scala:2: error: macro method classOf of type Class[Int] does not take type parameters.
  classOf[Int][Int]
              ^
one error found
